<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:background="@color/white"
        android:layout_height="fill_parent">
        
    <TextView
                android:id="@+id/text_titel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/FlippingListView"
                android:textColor="@color/text_header_blue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

    <View
            android:id="@+id/view_top"
            android:layout_below="@+id/text_titel"
            android:layout_width="match_parent"
            android:background="@color/text_header_blue"
            android:layout_height="2dip" />
    

    
     <HorizontalScrollView 
    android:id="@+id/horizontalView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true"
    android:layout_below="@+id/view_top"
    android:layout_above="@+id/ll_btn_layout"
    android:scrollbars="horizontal|vertical" >
    
         <RelativeLayout
        android:id="@+id/rl_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/listselector">
        
              <ListView
            android:id="@+id/list_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" 
            android:divider="#b5b5b5"
        	android:dividerHeight="1dp"
        	android:listSelector="@drawable/list_selector" />
        
             
             </RelativeLayout>
    
        
         </HorizontalScrollView>
         
     <LinearLayout
            android:id="@+id/ll_btn_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/white">
     

               <Button
                android:id="@+id/btn_addnew"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/AddNew"
                android:layout_marginTop="2dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/button_selector_addnew"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp" />
               
                <Button
                android:id="@+id/btn_flip"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/FlipView"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/button_selector_flipview"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp" />
               
     
         

         
      </LinearLayout>
    
    
    </RelativeLayout> 